--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,9 @@ serde_json = "*"
 serde_derive = "*"
 lazy_static = "1.4.0"
 scopeguard = "1.1.0"
+wasmer = "2.0.0"
+wasmtime-provider = "0.0.7"
+base64 = "0.13.0"
 
 [dependencies.samples]
 path = "samples/"
