parsing the json config and refactor

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ scopeguard = "1.1.0"
 wasmer = "2.0.0"
 wasmtime-provider = "0.0.7"
 base64 = "0.13.0"
+snailquote = "0.3.1"
 
 [dependencies.samples]
 path = "samples/"
