--- a/samples/package.json
+++ b/samples/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "clean": "find . -name \"*.wa*\" -exec rm {} \\;",
     "install": "npm install --save @assemblyscript/loader && npm install --save-dev assemblyscript && npm install --save assemblyscript-json",
-    "asbuild-proxy:untouched": "asc proxy/proxy --use abort=assembly/index/handleAbort -b proxy/proxy.wasm -t proxy/proxy.wat",
-    "asbuild-proxy:optimized": "asc proxy/proxy --use abort=assembly/index/handleAbort -b -O > proxy/proxy-optimized.wasm",
+    "asbuild-proxy:untouched": "asc proxy/proxy --use abort= -b proxy/proxy.wasm -t proxy/proxy.wat",
+    "asbuild-proxy:optimized": "asc proxy/proxy --use abort= -b -O > proxy/proxy-optimized.wasm",
     "asbuild-library:untouched": "asc library/library --use abort=assembly/index/handleAbort -b library/library.wasm -t library/library.wat",
     "asbuild-library:optimized": "asc library/library --use abort=assembly/index/handleAbort -b -O > library/library-optimized.wasm",
     "asbuild-unopt": "npm run asbuild-proxy:untouched  && npm run asbuild-library:untouched",
