--- a/samples/rproxy/Cargo.toml
+++ b/samples/rproxy/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2018"
 crate-type = ["rlib", "cdylib"]
 
 [dependencies]
-elvwasm = { git = "https://github.com/eluv-io/elv_wasm", branch = "main", package = "elvwasm"}
+elvwasm = { git = "https://github.com/eluv-io/elv_wasm", rev = "6bb215cc", package = "elvwasm"}
 #elvwasm = { path = "/home/ubuntu/elv_wasm" }
 wapc = "0.10.1"
 wapc-guest = "0.4.0"
