--- a/mock/Cargo.toml
+++ b/mock/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-elvwasm = { path = ".." }
+elvwasm = { path = "..", features = ["host-wasm"] }
 wapc = "0.10.1"
 wapc-guest = "0.4.0"
 serde = "*"
