--- a/samples/image/Cargo.toml
+++ b/samples/image/Cargo.toml
@@ -2,6 +2,7 @@
 name = "image"
 version = "0.1.0"
 edition = "2021"
+workspace = "../.."
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
@@ -17,4 +18,6 @@ serde_derive = "*"
 lazy_static = "1.4.0"
 snailquote = "0.3.0"
 scopeguard = "1.1.0"
+thiserror = "1.0.30"
+
 
