--- a/samples/real-img/Cargo.toml
+++ b/samples/real-img/Cargo.toml
@@ -2,6 +2,7 @@
 name = "real-img"
 version = "0.1.0"
 edition = "2021"
+workspace = "../.."
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -19,6 +20,7 @@ lazy_static = "1.4.0"
 snailquote = "0.3.0"
 scopeguard = "1.1.0"
 base64 = "0.13.0"
+thiserror = "1.0.30"
 
 
 [dependencies.image]
