--- a/samples/search/Cargo.toml
+++ b/samples/search/Cargo.toml
@@ -1,29 +1,19 @@
 [package]
-name = "elvwasm"
+name = "search"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[lib]
-crate-type = ["rlib", "cdylib"]
-path = "src/lib.rs"
-
 [dependencies]
+elvwasm = { path = "../.."}
 wapc = "*"
 wapc-guest = "*"
 serde = "*"
 serde_json = "*"
 serde_derive = "*"
 lazy_static = "1.4.0"
+snailquote = "0.3.0"
 scopeguard = "1.1.0"
 base64 = "0.13.0"
-snailquote = "0.3.1"
-json_dotpath = "1.1.0"
-structopt = "0.3.25"
 thiserror = "1.0.30"
-
-[workspace]
-members = ["samples", "samples/rproxy", "samples/image", "samples/real-img", "samples/search"]
-
-
