--- a/mock/Cargo.toml
+++ b/mock/Cargo.toml
@@ -9,8 +9,8 @@ edition = "2021"
 
 [dependencies]
 elvwasm = { path = ".." }
-wapc = "0.10.1"
-wapc-guest = "0.4.0"
+wapc = "*"
+wapc-guest = "*"
 serde = "*"
 serde_json = "*"
 serde_derive = "*"
@@ -21,6 +21,6 @@ base64 = "0.13.0"
 snailquote = "0.3.1"
 json_dotpath = "1.1.0"
 structopt = "0.3.25"
-wasmtime-provider = "0.0.7"
+wasmtime-provider = "*"
 wasmer-compiler-cranelift = "2.1.1"
 
