removed dynlib from wasm source added a wasi debug pusher

--- a/samples/rproxy/Cargo.toml
+++ b/samples/rproxy/Cargo.toml
@@ -7,7 +7,7 @@ workspace = "../.."
 
 
 [lib]
-crate-type = ["rlib", "cdylib"]
+crate-type = ["rlib"]
 
 [dependencies]
 elvwasm = { path = "../.."}
