wasm-pack for wasm32-unknown-unknown

--- a/.github/workflows/elv_wasm.yml
+++ b/.github/workflows/elv_wasm.yml
@@ -22,6 +22,10 @@ jobs:
           toolchain: nightly
           default: true
           override: true
+      - uses: jetli/wasm-pack-action@v0.3.0
+        with:
+          # Optional version of wasm-pack to install(eg. 'v0.9.1', 'latest')
+          version: 'latest'
       - name: Build
         run: cargo build --target wasm32-unknown-unknown --release --workspace
       - name: Run tests
