--- a/samples/real-img/Cargo.toml
+++ b/samples/real-img/Cargo.toml
@@ -7,7 +7,7 @@ workspace = "../.."
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
-crate-type = ["rlib"]
+crate-type = ["rlib", "cdylib"]
 
 [dependencies]
 elvwasm = { path = "../.."}
