--- a/samples/search/Cargo.toml
+++ b/samples/search/Cargo.toml
@@ -15,8 +15,11 @@ wapc-guest = "0.4.0"
 serde = "*"
 serde_json = "*"
 serde_derive = "*"
+linked-hash-map = { version = "*", features = ["serde_impl"] }
+indexmap = {version = "*", features = ["serde-1"]}
 lazy_static = "1.4.0"
 snailquote = "0.3.0"
 scopeguard = "1.1.0"
 base64 = "0.13.0"
 thiserror = "1.0.30"
+petgraph = "0.6.2"
