--- a/samples/search/Cargo.toml
+++ b/samples/search/Cargo.toml
@@ -23,3 +23,6 @@ scopeguard = "1.1.0"
 base64 = "0.13.0"
 thiserror = "1.0.30"
 petgraph = "0.6.2"
+
+[dev-dependencies]
+test-utils = {path = "test-utils"}
