--- a/samples/search/Cargo.toml
+++ b/samples/search/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 workspace = "../.."
 
 [lib]
-crate-type = ["rlib", "cdylib"]
+crate-type = ["cdylib"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
