--- a/.github/workflows/elv_wasm.yml
+++ b/.github/workflows/elv_wasm.yml
@@ -19,10 +19,12 @@ jobs:
       - name: Install latest rust toolchain
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: nightly
+          toolchain: 1.66.0-nightly
           default: true
           override: true
       - name: PreReqs
         run: rustup target add wasm32-unknown-unknown
+      - name: Build
+        run: cargo build --target wasm32-unknown-unknown --release --workspace        
       - name: Run tests
         run: cargo test --verbose
