--- a/.github/workflows/elv_wasm.yml
+++ b/.github/workflows/elv_wasm.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install latest rust toolchain
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: 1.66.0
+          toolchain: nightly-2022-11-16
           default: true
           override: true
       - name: PreReqs
