--- a/samples/objtar/Cargo.toml
+++ b/samples/objtar/Cargo.toml
@@ -17,8 +17,6 @@ serde_json = "*"
 serde_derive = "*"
 scopeguard = "1.1.0"
 base64 = "0.13.1"
+flate2 = "1.0.24"
+tar = "*"
 
-[dependencies.zip]
-version = "0.6.3"
-default-features = false
-features = ["deflate"]
