--- a/samples/search/Cargo.toml
+++ b/samples/search/Cargo.toml
@@ -27,8 +27,8 @@ petgraph = "0.6.2"
 
 [dev-dependencies]
 test-utils = {path = "test-utils"}
-tantivy_jpc = { git = "https://github.com/JanFalkin/tantivy_jpc", branch = "master" }
-#tantivy_jpc = { path = "../../../tantivy_jpc"}
+tantivy-jpc = { git = "https://github.com/JanFalkin/tantivy-jpc", branch = "master" }
+#tantivy-jpc = { path = "../../../tantivy_jpc"}
 wasmer = "2.1.1"
 json_dotpath = "1.1.0"
 structopt = "0.3.25"
