--- a/samples/package.json
+++ b/samples/package.json
@@ -8,11 +8,9 @@
     "install": "npm install --save @assemblyscript/loader && npm install --save-dev assemblyscript && npm install --save assemblyscript-json",
     "asbuild-proxy:untouched": "asc proxy/proxy --use abort= -b proxy/proxy.wasm -t proxy/proxy.wat",
     "asbuild-proxy:optimized": "asc proxy/proxy --use abort= -b -O > proxy/proxy-optimized.wasm",
-    "asbuild-library:untouched": "asc library/library --use abort=assembly/index/handleAbort -b library/library.wasm -t library/library.wat",
-    "asbuild-library:optimized": "asc library/library --use abort=assembly/index/handleAbort -b -O > library/library-optimized.wasm",
-    "asbuild-unopt": "npm run asbuild-proxy:untouched  && npm run asbuild-library:untouched",
-    "asbuild-all": "npm run asbuild-proxy:untouched && npm run asbuild-proxy:optimized && npm run asbuild-library:untouched && npm run asbuild-library:optimized",
-    "asbuild-all-untouched": "npm run asbuild-proxy:untouched && npm run asbuild-library:untouched",
+    "asbuild-unopt": "npm run asbuild-proxy:untouched",
+    "asbuild-all": "npm run asbuild-proxy:untouched && npm run asbuild-proxy:optimized",
+    "asbuild-all-untouched": "npm run asbuild-proxy:untouched",
     "asbuild": "npm run asbuild-all-untouched"
   },
   "author": "",
