crates.io compliance in cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,14 @@
 name = "elvwasm"
 description = "Contains and collects the bitcode extension API for the Eluvio content fabric"
 homepage = "https://eluvio.co/"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
 repository = "https://github.com/eluv-io/elv-wasm"
 readme = "README.md"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+rust-version = "1.68.0"
+license = "MIT OR Apache-2.0"
+keywords = ["eluvio", "content fabric"]
+categories = ["api-bindings", "wasm"]
 
 [lib]
 crate-type = ["rlib", "cdylib"]
