--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 repository = "https://github.com/eluv-io/elv-wasm"
 readme = "README.md"
 rust-version = "1.56.0"
-license = "MIT OR Apache-2.0"
+license = "Apache-2.0"
 keywords = ["eluvio", "content fabric"]
 categories = ["api-bindings", "wasm"]
 
