align versions, fixed build.rs, new tinygo for go 1.20

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,14 +24,14 @@ crate-type = ["rlib", "cdylib"]
 path = "src/lib.rs"
 
 [dependencies]
-wapc = "*"
-wapc-guest = "*"
-serde = "*"
-serde_json = "*"
-serde_derive = "*"
+wapc = "1.0.0"
+wapc-guest = "1.0"
+serde = "1.0.156"
+serde_json = "1.0.94"
+serde_derive = "1.0.156"
 lazy_static = "1.4.0"
 scopeguard = "1.1.0"
-base64 = "0.13.0"
+base64 = "0.21.0"
 snailquote = "0.3.1"
 json_dotpath = "1.1.0"
 structopt = "0.3.25"
