--- a/samples/everything/Cargo.toml
+++ b/samples/everything/Cargo.toml
@@ -9,16 +9,16 @@ crate-type = ["rlib", "cdylib"]
 
 [dependencies]
 elvwasm = { path = "../.."}
-wapc = "*"
-wapc-guest = "*"
-serde = "*"
-serde_json = "*"
-serde_derive = "*"
+wapc = "1.0.0"
+wapc-guest = "1.0"
+serde = "1.0.156"
+serde_json = "1.0.94"
+serde_derive = "1.0.156"
 lazy_static = "1.4.0"
 snailquote = "0.3.0"
 thiserror = "1.0.30"
 scopeguard = "1.1.0"
-base64 = "0.13.0"
+base64 = "0.21.0"
 
 [dependencies.image]
 version = "0.23.14"
