--- a/samples/lro/Cargo.toml
+++ b/samples/lro/Cargo.toml
@@ -15,8 +15,8 @@ crate-type = ["rlib", "cdylib"]
 
 [dependencies]
 elvwasm = {path = "../.."}
-wapc = "*"
-wapc-guest = "*"
-serde = "*"
-serde_json = "*"
-serde_derive = "*"
+wapc = "1.0.0"
+wapc-guest = "1.0"
+serde = "1.0.156"
+serde_json = "1.0.94"
+serde_derive = "1.0.156"
