--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,14 +10,7 @@ rust-version = "1.56.0"
 license = "Apache-2.0"
 keywords = ["eluvio", "content fabric"]
 categories = ["api-bindings", "wasm"]
-exclude = [
-    "samples/*",
-    "scripts/*",
-    "build.rs",
-    ".gitignore",
-    ".github/*",
-    "doc.tpl",
-]
+exclude = ["scripts/*", ".gitignore", ".github/*", "doc.tpl"]
 
 [lib]
 crate-type = ["rlib", "cdylib"]
