--- a/samples/real-img/Cargo.toml
+++ b/samples/real-img/Cargo.toml
@@ -10,7 +10,7 @@ workspace = "../.."
 crate-type = ["rlib", "cdylib"]
 
 [dependencies]
-elvwasm = { path = "../.."}
+elvwasm = { path = "../.." }
 wapc = "1.0.0"
 wapc-guest = "1.0"
 serde = "1.0.156"
@@ -26,5 +26,18 @@ thiserror = "1.0.30"
 [dependencies.image]
 version = "0.23.14"
 default-features = false
-features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]
-
+features = [
+    "gif",
+    "jpeg",
+    "ico",
+    "png",
+    "pnm",
+    "tga",
+    "tiff",
+    "webp",
+    "bmp",
+    "hdr",
+    "dxt",
+    "dds",
+    "farbfeld",
+]
