--- a/samples/meta/Cargo.toml
+++ b/samples/meta/Cargo.toml
@@ -25,3 +25,4 @@ scopeguard = "1.1.0"
 base64 = "0.21.0"
 thiserror = "1.0.30"
 maplit = "1.0"
+openapi_proc_macro = { path = "../../../elv-wasm-api-macros" }
