--- a/samples/playout/Cargo.toml
+++ b/samples/playout/Cargo.toml
@@ -19,9 +19,11 @@ wapc = "1.0.0"
 wapc-guest = "1.0"
 serde = "1.0.156"
 serde_json = "1.0.94"
+serde_with = "3.4.0"
 serde_derive = "1.0.156"
 lazy_static = "1.4.0"
 snailquote = "0.3.0"
 scopeguard = "1.1.0"
 base64 = "0.21.0"
 thiserror = "1.0.30"
+chrono = { version = "^0.4.31", features = ["serde"] }
