--- a/.github/workflows/elv_wasm.yml
+++ b/.github/workflows/elv_wasm.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install latest rust toolchain
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: nightly-2022-11-16
+          toolchain: nightly
           default: true
           override: true
       - uses: actions/setup-go@v2
