--- a/samples/meta/Cargo.toml
+++ b/samples/meta/Cargo.toml
@@ -13,9 +13,15 @@ name = "meta"
 crate-type = ["rlib", "cdylib"]
 
 [dependencies]
-elvwasm = {path = "../.."}
+elvwasm = { path = "../.." }
 wapc = "1.0.0"
 wapc-guest = "1.0"
 serde = "1.0.156"
 serde_json = "1.0.94"
 serde_derive = "1.0.156"
+lazy_static = "1.4.0"
+snailquote = "0.3.0"
+scopeguard = "1.1.0"
+base64 = "0.21.0"
+thiserror = "1.0.30"
+maplit = "1.0"
