--- a/samples/lro/Cargo.toml
+++ b/samples/lro/Cargo.toml
@@ -8,13 +8,14 @@ readme = "README.md"
 repository = "https://github.com/JanFalkin/lro"
 description = "A Rust wasm library"
 workspace = "../.."
+edition = "2021"
 
 [lib]
 name = "lro"
 crate-type = ["rlib", "cdylib"]
 
 [dependencies]
-elvwasm = {path = "../.."}
+elvwasm = { path = "../.." }
 wapc = "1.0.0"
 wapc-guest = "1.0"
 serde = "1.0.156"
