--- a/samples/meta/Cargo.toml
+++ b/samples/meta/Cargo.toml
@@ -7,6 +7,7 @@ license = "MIT"
 readme = "README.md"
 repository = "https://www.github.com/eluv-io/elv-wasm"
 description = "A Rust wasm library"
+edition = "2021"
 
 [lib]
 name = "meta"
